fix height overflow on preview and no resizing for the incorrect image aspect
fix height overflow on preview

reformat for visibility

...

**

no resizing for the incorrect image aspect

--- a/MediaAdminBundle/Resources/public/less/media.less
+++ b/MediaAdminBundle/Resources/public/less/media.less
@@ -1,112 +1,122 @@
 .figure {
-  vertical-align: top;
-  position: relative;
-  height: 127px;
-  width: 127px;
-}
-.figure .img-container{
-  line-height: 112px;
-  text-align: center;
-  background: slategrey;
-  height: 100%;
-}
-.figure .img-container img{
-  vertical-align:middle;
-  max-width: 117px;
-  max-height: 117px;
-}
+    vertical-align: top;
+    position: relative;
+    height: 127px;
+    width: 127px;
 
-.figure div.caption {
-  display: none;
-  position: absolute;
-  bottom: 0px;
-  left: 5px;
-  margin: 0;
-  width: 117px;
-  padding: 5px 3%;
-  background-color: #555;
-  color: #fff;
-  font-weight: bold;
-  max-height: 60px;
-  overflow-y: hidden;
-  span.tool {
-    float: right;
-    font-size: 20px;
-    margin-left:-20px;
-  }
-  span.tool:hover {
-    cursor: pointer;
-    background-color: #605F5D;
-  }
-  span.title {
-    float: left;
-    display: inline-block;
-    width: 100%;
-    padding-right: 20px;
-    word-wrap: break-word;
-  }
+    .img-container {
+        line-height: 112px;
+        text-align: center;
+        background: slategrey;
+        height: 100%;
+
+        img {
+            vertical-align: middle;
+            max-width: 117px;
+            max-height: 117px;
+            overflow: hidden;
+        }
+    }
+
+    div.caption {
+        display: none;
+        position: absolute;
+        bottom: 0px;
+        left: 5px;
+        margin: 0;
+        width: 117px;
+        padding: 5px 3%;
+        background-color: #555;
+        color: #fff;
+        font-weight: bold;
+        max-height: 60px;
+        overflow-y: hidden;
+
+        span.tool {
+            float: right;
+            font-size: 20px;
+            margin-left: -20px;
+        }
+
+        span.tool:hover {
+            cursor: pointer;
+            background-color: #605F5D;
+        }
+
+        span.title {
+            float: left;
+            display: inline-block;
+            width: 100%;
+            padding-right: 20px;
+            word-wrap: break-word;
+        }
+    }
 }
 
 .jcrop-holder #preview-pane {
-  display: block;
-  position: absolute;
-  top: 150px;
-  right: -280px;
-  padding: 6px;
-  border: 1px rgba(0,0,0,.4) solid;
-  background-color: white;
+    display: block;
+    position: absolute;
+    top: 150px;
+    right: -280px;
+    padding: 6px;
+    border: 1px rgba(0, 0, 0, .4) solid;
+    background-color: white;
 
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
-  border-radius: 6px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
 
-  -webkit-box-shadow: 1px 1px 5px 2px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 1px 1px 5px 2px rgba(0, 0, 0, 0.2);
-  box-shadow: 1px 1px 5px 2px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 1px 1px 5px 2px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 1px 1px 5px 2px rgba(0, 0, 0, 0.2);
+    box-shadow: 1px 1px 5px 2px rgba(0, 0, 0, 0.2);
 }
+
 #preview-pane .preview-container {
-  overflow: hidden;
+    overflow: hidden;
 }
+
 img:not([src]) {
-    background:url('../img/no_image_available.jpg');
-    background-size:100px 100px;
-    width:100px;
-    height:100px;
-    display:inline-block;
+    background: url('../img/no_image_available.jpg');
+    background-size: 100px 100px;
+    width: 100px;
+    height: 100px;
+    display: inline-block;
 }
+
 .media-override-format-form {
-  padding: 10px;
+    padding: 10px;
 }
+
 #original-image .superbox-current-img, #original-image .jcrop-holder {
-  float:none;
+    float: none;
 }
 
 #original-image {
-  padding-left:10px;
+    padding-left: 10px;
 }
 
 #media_crop_format {
-  width:250px;
+    width: 250px;
 }
 
 .media_crop_preview, .media_format_actions {
-  margin-bottom:15px;
+    margin-bottom: 15px;
 }
 
 img#preview_thumbnail {
-  max-width:100%;
-  display:block;
+    max-width: 100%;
+    display: block;
 }
 
 button#sendToTiny {
-  margin-top:10px;
+    margin-top: 10px;
 }
 
 .no-pointer {
-  cursor: inherit;
+    cursor: inherit;
 }
 
 .add-media {
-  margin-left: 17px;
-  margin-top: 10px;
+    margin-left: 17px;
+    margin-top: 10px;
 }
